# py2mql5

./: .gitignore  README.md  pyproject.toml
notebooks/: test_login.ipynb  test_seperate.ipynb
src/py2mql5/: __init__.py  account_properties.py
